# Agentic-Grad-scout-system

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
scripts/: search.py
src/gradscout/: config.py  graph.py  models.py  state.py
src/gradscout/nodes/: discover.py  intake.py  output.py  rank.py  research.py
src/gradscout/tools/: browser.py  extractor.py  mastersportal.py  ranker.py
src/gradscout/utils/: logging.py
tests/unit/: test_extractor.py  test_mastersportal.py  test_models.py
